test/testcase/version_1/fail/playlist-markup-meta.xspf
<?xml version="1.0" encoding="utf-8"?>

<!--
  Description: Element must not contain HTML
  Expect:      ContainsHTML{element:meta,parent:playlist} 
-->

<playlist version="1" xmlns="http://xspf.org/ns/0/">

  <meta rel="http://example.com/"><blink>This must not be markup.</blink></meta>

  <trackList>
  </trackList>

</playlist>
